--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.0",
+    "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
