--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.4",
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.0",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.0.3",
